lib/occiantlr/output/OCCIANTLRParser.java
// $ANTLR 3.4 /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g 2012-06-12 16:34:37

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings({"all", "warnings", "unchecked"})
public class OCCIANTLRParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AMPERSAND", "AT", "BACKSLASH", "CATEGORY_KEY", "COLON", "DASH", "DIGIT", "DOT", "EQUALS", "ESC", "GT", "HASH", "LINK_KEY", "LOALPHA", "LT", "PERCENT", "PLUS", "QUESTION", "QUOTE", "SEMICOLON", "SLASH", "SQUOTE", "TILDE", "UNDERSCORE", "UPALPHA", "WS", "X_Occi_ATTRIBUTE_KEY", "X_Occi_LOCATION_KEY", "'action'", "'actions'", "'attributes'", "'category'", "'class'", "'kind'", "'link'", "'location'", "'mixin'", "'rel'", "'scheme'", "'self'", "'term'", "'title'"
    };

    public static final int EOF=-1;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int AMPERSAND=4;
    public static final int AT=5;
    public static final int BACKSLASH=6;
    public static final int CATEGORY_KEY=7;
    public static final int COLON=8;
    public static final int DASH=9;
    public static final int DIGIT=10;
    public static final int DOT=11;
    public static final int EQUALS=12;
    public static final int ESC=13;
    public static final int GT=14;
    public static final int HASH=15;
    public static final int LINK_KEY=16;
    public static final int LOALPHA=17;
    public static final int LT=18;
    public static final int PERCENT=19;
    public static final int PLUS=20;
    public static final int QUESTION=21;
    public static final int QUOTE=22;
    public static final int SEMICOLON=23;
    public static final int SLASH=24;
    public static final int SQUOTE=25;
    public static final int TILDE=26;
    public static final int UNDERSCORE=27;
    public static final int UPALPHA=28;
    public static final int WS=29;
    public static final int X_Occi_ATTRIBUTE_KEY=30;
    public static final int X_Occi_LOCATION_KEY=31;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "category_rel", "link_attributes", "scheme", "category", 
    "link_rel", "category_scheme", "link_value", "link_self", "link_category", 
    "category_class", "category_term", "uri", "attribute", "attribute_value", 
    "attribute_name", "category_location", "x_Occi_location", "term", "category_attributes",
    "category_title", "title", "link_target", "category_value", "digits", 
    "number", "link", "class_type", "reserved_words", "attribute_component", 
    "category_actions", "x_Occi_attribute"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false, 
        false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public OCCIANTLRParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public OCCIANTLRParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this, port, null);

        setDebugListener(proxy);
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
    }

public OCCIANTLRParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg, new RecognizerSharedState());
}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

    public String[] getTokenNames() { return OCCIANTLRParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g"; }



    // $ANTLR start "category"
    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:15:1: category : CATEGORY_KEY COLON category_value ;
    public final void category() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "category");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(15, 0);

        try {
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:16:2: ( CATEGORY_KEY COLON category_value )
            dbg.enterAlt(1);

            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:16:4: CATEGORY_KEY COLON category_value
            {
            dbg.location(16,4);
            match(input,CATEGORY_KEY,FOLLOW_CATEGORY_KEY_in_category15); 
            dbg.location(16,17);
            match(input,COLON,FOLLOW_COLON_in_category17); 
            dbg.location(16,23);
            pushFollow(FOLLOW_category_value_in_category19);
            category_value();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(16, 37);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "category");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "category"



    // $ANTLR start "category_value"
    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:17:3: category_value : category_term category_scheme category_class ( category_title )? ( category_rel )? ( category_location )? ( category_attributes )? ( category_actions )? ( SEMICOLON )? ;
    public final void category_value() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "category_value");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(17, 2);

        try {
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:13: ( category_term category_scheme category_class ( category_title )? ( category_rel )? ( category_location )? ( category_attributes )? ( category_actions )? ( SEMICOLON )? )
            dbg.enterAlt(1);

            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:15: category_term category_scheme category_class ( category_title )? ( category_rel )? ( category_location )? ( category_attributes )? ( category_actions )? ( SEMICOLON )?
            {
            dbg.location(18,15);
            pushFollow(FOLLOW_category_term_in_category_value42);
            category_term();

            state._fsp--;

            dbg.location(18,29);
            pushFollow(FOLLOW_category_scheme_in_category_value44);
            category_scheme();

            state._fsp--;

            dbg.location(18,45);
            pushFollow(FOLLOW_category_class_in_category_value46);
            category_class();

            state._fsp--;

            dbg.location(18,60);
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:60: ( category_title )?
            int alt1=2;
            try { dbg.enterSubRule(1);
            try { dbg.enterDecision(1, decisionCanBacktrack[1]);

            int LA1_0 = input.LA(1);

            if ( (LA1_0==SEMICOLON) ) {
                int LA1_1 = input.LA(2);

                if ( (LA1_1==WS) ) {
                    int LA1_3 = input.LA(3);

                    if ( (LA1_3==45) ) {
                        alt1=1;
                    }
                }
                else if ( (LA1_1==45) ) {
                    alt1=1;
                }
            }
            } finally {dbg.exitDecision(1);}

            switch (alt1) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:60: category_title
                    {
                    dbg.location(18,60);
                    pushFollow(FOLLOW_category_title_in_category_value48);
                    category_title();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(1);}

            dbg.location(18,76);
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:76: ( category_rel )?
            int alt2=2;
            try { dbg.enterSubRule(2);
            try { dbg.enterDecision(2, decisionCanBacktrack[2]);

            int LA2_0 = input.LA(1);

            if ( (LA2_0==SEMICOLON) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==WS) ) {
                    int LA2_3 = input.LA(3);

                    if ( (LA2_3==41) ) {
                        alt2=1;
                    }
                }
                else if ( (LA2_1==41) ) {
                    alt2=1;
                }
            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:76: category_rel
                    {
                    dbg.location(18,76);
                    pushFollow(FOLLOW_category_rel_in_category_value51);
                    category_rel();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(2);}

            dbg.location(18,90);
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:90: ( category_location )?
            int alt3=2;
            try { dbg.enterSubRule(3);
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            int LA3_0 = input.LA(1);

            if ( (LA3_0==SEMICOLON) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==WS) ) {
                    int LA3_3 = input.LA(3);

                    if ( (LA3_3==39) ) {
                        alt3=1;
                    }
                }
                else if ( (LA3_1==39) ) {
                    alt3=1;
                }
            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:90: category_location
                    {
                    dbg.location(18,90);
                    pushFollow(FOLLOW_category_location_in_category_value54);
                    category_location();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(3);}

            dbg.location(18,109);
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:109: ( category_attributes )?
            int alt4=2;
            try { dbg.enterSubRule(4);
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            int LA4_0 = input.LA(1);

            if ( (LA4_0==SEMICOLON) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==WS) ) {
                    int LA4_3 = input.LA(3);

                    if ( (LA4_3==34) ) {
                        alt4=1;
                    }
                }
                else if ( (LA4_1==34) ) {
                    alt4=1;
                }
            }
            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:109: category_attributes
                    {
                    dbg.location(18,109);
                    pushFollow(FOLLOW_category_attributes_in_category_value57);
                    category_attributes();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(4);}

            dbg.location(18,130);
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:130: ( category_actions )?
            int alt5=2;
            try { dbg.enterSubRule(5);
            try { dbg.enterDecision(5, decisionCanBacktrack[5]);

            int LA5_0 = input.LA(1);

            if ( (LA5_0==SEMICOLON) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==WS||LA5_1==33) ) {
                    alt5=1;
                }
            }
            } finally {dbg.exitDecision(5);}

            switch (alt5) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:130: category_actions
                    {
                    dbg.location(18,130);
                    pushFollow(FOLLOW_category_actions_in_category_value60);
                    category_actions();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(5);}

            dbg.location(18,148);
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:148: ( SEMICOLON )?
            int alt6=2;
            try { dbg.enterSubRule(6);
            try { dbg.enterDecision(6, decisionCanBacktrack[6]);

            int LA6_0 = input.LA(1);

            if ( (LA6_0==SEMICOLON) ) {
                alt6=1;
            }
            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:18:148: SEMICOLON
                    {
                    dbg.location(18,148);
                    match(input,SEMICOLON,FOLLOW_SEMICOLON_in_category_value63); 

                    }
                    break;

            }
            } finally {dbg.exitSubRule(6);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(18, 157);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "category_value");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "category_value"



    // $ANTLR start "category_term"
    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:19:3: category_term : ( WS )? term ;
    public final void category_term() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "category_term");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(19, 2);

        try {
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:19:20: ( ( WS )? term )
            dbg.enterAlt(1);

            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:19:22: ( WS )? term
            {
            dbg.location(19,22);
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:19:22: ( WS )?
            int alt7=2;
            try { dbg.enterSubRule(7);
            try { dbg.enterDecision(7, decisionCanBacktrack[7]);

            int LA7_0 = input.LA(1);

            if ( (LA7_0==WS) ) {
                alt7=1;
            }
            } finally {dbg.exitDecision(7);}

            switch (alt7) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:19:22: WS
                    {
                    dbg.location(19,22);
                    match(input,WS,FOLLOW_WS_in_category_term76); 

                    }
                    break;

            }
            } finally {dbg.exitSubRule(7);}

            dbg.location(19,26);
            pushFollow(FOLLOW_term_in_category_term79);
            term();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(19, 29);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "category_term");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "category_term"



    // $ANTLR start "category_scheme"
    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:20:3: category_scheme : SEMICOLON ( WS )? 'scheme' EQUALS QUOTE scheme QUOTE ;
    public final void category_scheme() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "category_scheme");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(20, 2);

        try {
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:20:20: ( SEMICOLON ( WS )? 'scheme' EQUALS QUOTE scheme QUOTE )
            dbg.enterAlt(1);

            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:20:22: SEMICOLON ( WS )? 'scheme' EQUALS QUOTE scheme QUOTE
            {
            dbg.location(20,22);
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_category_scheme89); 
            dbg.location(20,32);
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:20:32: ( WS )?
            int alt8=2;
            try { dbg.enterSubRule(8);
            try { dbg.enterDecision(8, decisionCanBacktrack[8]);

            int LA8_0 = input.LA(1);

            if ( (LA8_0==WS) ) {
                alt8=1;
            }
            } finally {dbg.exitDecision(8);}

            switch (alt8) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:20:32: WS
                    {
                    dbg.location(20,32);
                    match(input,WS,FOLLOW_WS_in_category_scheme91); 

                    }
                    break;

            }
            } finally {dbg.exitSubRule(8);}

            dbg.location(20,36);
            match(input,42,FOLLOW_42_in_category_scheme94); 
            dbg.location(20,45);
            match(input,EQUALS,FOLLOW_EQUALS_in_category_scheme96); 
            dbg.location(20,52);
            match(input,QUOTE,FOLLOW_QUOTE_in_category_scheme98); 
            dbg.location(20,58);
            pushFollow(FOLLOW_scheme_in_category_scheme100);
            scheme();

            state._fsp--;

            dbg.location(20,65);
            match(input,QUOTE,FOLLOW_QUOTE_in_category_scheme102); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(20, 69);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "category_scheme");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "category_scheme"



    // $ANTLR start "category_class"
    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:21:3: category_class : SEMICOLON ( WS )? 'class' EQUALS QUOTE class_type QUOTE ;
    public final void category_class() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "category_class");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(21, 2);

        try {
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:21:20: ( SEMICOLON ( WS )? 'class' EQUALS QUOTE class_type QUOTE )
            dbg.enterAlt(1);

            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:21:22: SEMICOLON ( WS )? 'class' EQUALS QUOTE class_type QUOTE
            {
            dbg.location(21,22);
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_category_class113); 
            dbg.location(21,32);
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:21:32: ( WS )?
            int alt9=2;
            try { dbg.enterSubRule(9);
            try { dbg.enterDecision(9, decisionCanBacktrack[9]);

            int LA9_0 = input.LA(1);

            if ( (LA9_0==WS) ) {
                alt9=1;
            }
            } finally {dbg.exitDecision(9);}

            switch (alt9) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:21:32: WS
                    {
                    dbg.location(21,32);
                    match(input,WS,FOLLOW_WS_in_category_class115); 

                    }
                    break;

            }
            } finally {dbg.exitSubRule(9);}

            dbg.location(21,36);
            match(input,36,FOLLOW_36_in_category_class118); 
            dbg.location(21,44);
            match(input,EQUALS,FOLLOW_EQUALS_in_category_class120); 
            dbg.location(21,51);
            match(input,QUOTE,FOLLOW_QUOTE_in_category_class122); 
            dbg.location(21,57);
            pushFollow(FOLLOW_class_type_in_category_class124);
            class_type();

            state._fsp--;

            dbg.location(21,68);
            match(input,QUOTE,FOLLOW_QUOTE_in_category_class126); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(21, 72);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "category_class");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "category_class"



    // $ANTLR start "category_title"
    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:22:3: category_title : SEMICOLON ( WS )? 'title' EQUALS QUOTE title QUOTE ;
    public final void category_title() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "category_title");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(22, 2);

        try {
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:22:19: ( SEMICOLON ( WS )? 'title' EQUALS QUOTE title QUOTE )
            dbg.enterAlt(1);

            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:22:21: SEMICOLON ( WS )? 'title' EQUALS QUOTE title QUOTE
            {
            dbg.location(22,21);
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_category_title136); 
            dbg.location(22,31);
            // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:22:31: ( WS )?
            int alt10=2;
            try { dbg.enterSubRule(10);
            try { dbg.enterDecision(10, decisionCanBacktrack[10]);

            int LA10_0 = input.LA(1);

            if ( (LA10_0==WS) ) {
                alt10=1;
            }
            } finally {dbg.exitDecision(10);}

            switch (alt10) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ffeldhaus/Development/rOcci/lib/Occiantlr/OCCIANTLR.g:22:31: WS
                    {
                    dbg.location(22,31);
                    match(input,WS,FOLLOW_WS_in_category_title138); 

                    }
                    break;

            }
            } finally {dbg.exitSubRule(10);}

            dbg.location(22,35);
            match(input,45,FOLLOW_45_in_category_title141); 
            dbg.location(22,43);
            match(input,EQUALS,FOLLOW_EQUALS_in_category_title143); 
            dbg.location(22,50);
            match(input,QUOTE,FOLLOW_QUOTE_in_category_title145); 
            dbg.location(22,56);
            pushFollow(FOLLOW_title_in_category_title147);
            title();

            state._fsp--;

            dbg.location(22,62);
            match(input,QUOTE,FOLLOW_QUOTE_in_category_title149); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(22, 66);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "category_title");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "category_title"


